fixed spelling and content of README

--- a/final.ipynb
+++ b/final.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# what makes a house price go up?\n",
     "\n",
-    "which factor/factors of a houses location, or structure is the biggest determining factor?\n",
+    "which factor/factors of a are the biggest determining factor?\n",
+    "What should you look for in a house you wish tp purchase?\n",
     "\n",
     "i assume it's bathrooms, but that's completely subjective opinion.\n",
     "let's see what the data says"
