changed README and removed unneccesary spaces in notebook

--- a/final.ipynb
+++ b/final.ipynb
@@ -558,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "homes['sqft_basement'] = homes['sqft_basement'].str.replace('?', '0', regex=False).astype(np.float64)\n"
+    "homes['sqft_basement'] = homes['sqft_basement'].str.replace('?', '0', regex=False).astype(np.float64)"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "waterfront, view, condition, grade, yr_built, yr_renovated, and zipcode are **categorical**. i'm not sure which ones i will use, but i think i'll use LabelEncoding to make them usable"
+    "`waterfront`, `view`, `condition`, `grade`, `yr_built`, `yr_renovated`, and `zipcode` are **categorical**. i'm not sure which ones i will use, but i think i'll use LabelEncoding to make them usable"
    ]
   },
   {
@@ -3227,9 +3227,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.figure(figsize=(10,10))\n",
-    "# sns.lineplot(y=y_split_pred,x=residuals,marker='x',color='orange')\n",
-    "\n",
     "# VIF checking idea from this article:\n",
     "# https://towardsdatascience.com/everything-you-need-to-know-about-multicollinearity-2f21f082d6dc\n",
     "\n",
